2010-01-04  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        Repaint issues in text input under a scale transform
        https://bugs.webkit.org/show_bug.cgi?id=32086
        
        Test for repaint after a subtree layout inside a transformed element.

        * fast/repaint/subtree-layoutstate-transform.html: Added.
        * platform/mac/fast/repaint/subtree-layoutstate-transform-expected.checksum: Added.
        * platform/mac/fast/repaint/subtree-layoutstate-transform-expected.png: Added.
        * platform/mac/fast/repaint/subtree-layoutstate-transform-expected.txt: Added.

2010-01-04  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        Reentrancy problem with selection in some edge cases. 
        https://bugs.webkit.org/show_bug.cgi?id=32842 
        rdar://problem/7449974 

        * fast/forms/selection-layout-reentry-strange-case-expected.txt: Added.
        * fast/forms/selection-layout-reentry-strange-case.html: Added.
        * platform/mac/accessibility/frame-with-title-expected.txt: Updated since 
        the number of layouts is now different. 

2010-01-04  Dmitry Titov  <dimich@chromium.org>

        Not reviewed, revert r52745 and r52746 on behalf of Nikolas Zimmermann, as discussed on IRC.
        Patch produced by 'git revert' and then reverting back ChangeLog files.

        * platform/mac/svg/W3C-SVG-1.1/painting-marker-01-f-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/painting-marker-02-f-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/painting-marker-03-f-expected.txt:
        * platform/mac/svg/custom/circular-marker-reference-1-expected.txt:
        * platform/mac/svg/custom/circular-marker-reference-2-expected.txt:
        * platform/mac/svg/custom/circular-marker-reference-3-expected.txt:
        * platform/mac/svg/custom/circular-marker-reference-4-expected.txt:
        * platform/mac/svg/custom/js-late-marker-and-object-creation-expected.txt: