@@ -1,0 +1,3 @@
+This tests accessing the visible property of a BarInfo after the relevant frame is no longer in a web page. If the test did not crash, it passed.
+
+TEST RAN
