@@ -1,3 +1,15 @@
+2010-01-04  Darin Adler  <darin@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        Added missing null check in BarInfo code.
+
+        Test: fast/dom/Window/BarInfo-after-frame-removed.html
+
+        * page/BarInfo.cpp:
+        (WebCore::BarInfo::visible): Added null check. A few other
+        cleanups.
+
 2010-01-04  Mark Rowe  <mrowe@apple.com>
 
         Rubber-stamped by Jon Honeycutt.
